fix(naming): names updated, swagger fixes
