# src/utils/swagger-generator/openapi-docs.json
@@ -86,7 +86,7 @@
                             "maxLength": 250
                         },
                         "required": true,
-                        "name": "registryIdentifier",
+                        "name": "policyId",
                         "in": "query"
                     },
                     {
@@ -96,7 +96,7 @@
                             "maxLength": 250
                         },
                         "required": true,
-                        "name": "assetIdentifier",
+                        "name": "assetName",
                         "in": "query"
                     }
                 ],
@@ -120,7 +120,7 @@
                                                                 "WEB3_CARDANO_V1"
                                                             ]
                                                         },
-                                                        "identifier": {
+                                                        "policyId": {
                                                             "type": "string",
                                                             "nullable": true
                                                         },
@@ -131,7 +131,7 @@
                                                     },
                                                     "required": [
                                                         "type",
-                                                        "identifier",
+                                                        "policyId",
                                                         "url"
                                                     ]
                                                 },
@@ -270,7 +270,7 @@
                                                         "type": "string"
                                                     }
                                                 },
-                                                "identifier": {
+                                                "agentIdentifier": {
                                                     "type": "string"
                                                 }
                                             },
@@ -296,7 +296,7 @@
                                                 "otherLegal",
                                                 "requestsPerHour",
                                                 "tags",
-                                                "identifier"
+                                                "agentIdentifier"
                                             ]
                                         },
                                         "status": {
@@ -314,7 +314,7 @@
                                             "status": "ONLINE",
                                             "RegistrySource": {
                                                 "type": "WEB3_CARDANO_V1",
-                                                "identifier": "0000000000000000000000000000000000000000000000000000000000000000",
+                                                "policyId": "0000000000000000000000000000000000000000000000000000000000000000",
                                                 "url": null
                                             },
                                             "Capability": {
@@ -352,8 +352,8 @@
                                             "lastUptimeCheck": "1970-01-01T00:00:00.000Z",
                                             "apiUrl": "https://localhost:3000/api/",
                                             "authorOrganization": "MASUMI",
-                                            "identifier": "222222222222222222222222222222222222222222222222222222222222222222",
-                                            "id": "kcyon224ff58htqzw7os9tg2"
+                                            "agentIdentifier": "222222222222222222222222222222222222222222222222222222222222222222",
+                                            "id": "bejv724pug3pvkuinh7k2z5l"
                                         },
                                         "status": "success"
                                     }
@@ -436,12 +436,12 @@
                                                 },
                                                 "maxItems": 5
                                             },
-                                            "registryIdentifier": {
+                                            "policyId": {
                                                 "type": "string",
                                                 "minLength": 1,
                                                 "maxLength": 250
                                             },
-                                            "assetIdentifier": {
+                                            "assetName": {
                                                 "type": "string",
                                                 "minLength": 1,
                                                 "maxLength": 250
@@ -514,8 +514,8 @@
                                     "cursorId": "last_paginated_item",
                                     "network": "PREPROD",
                                     "filter": {
-                                        "registryIdentifier": "registry_identifier",
-                                        "assetIdentifier": "asset_identifier",
+                                        "policyId": "policy_id",
+                                        "assetName": "asset_name",
                                         "paymentTypes": [
                                             "WEB3_CARDANO_V1"
                                         ],
@@ -762,7 +762,7 @@
                                                     "apiUrl": "https://localhost:3000/api/",
                                                     "authorOrganization": "MASUMI",
                                                     "identifier": "222222222222222222222222222222222222222222222222222222222222222222",
-                                                    "id": "gv1786yytufha2lv61surf0z"
+                                                    "id": "pdqg4392of3nglpyg84l0etn"
                                                 }
                                             ]
                                         },
